# qpragma-shor

./: CMakeLists.txt  LICENSE  README.md  setenv.sh
cmake/: environ.cmake
include/qpragma/: shor.h
include/qpragma/shor/: continued_fraction.h  core.h  core.ipp  display.h  fraction.h
src/: continued_fraction.cpp  display.cpp  fraction.cpp  main.cpp
tests/: tests_continued_fraction.cpp  tests_main.cpp
